
  o the default value for the 'fig.path' option is 'figure/' now so
  that plots will be put under this directory by default; the default
  was './' in the past which makes the current directory messy when
  there are many plots

  o knitr will fully stop when an error is encountered in knit(); in
  the past only a message was issued in this case in an interactive R
  session

BUG FIXES

  o the compilation of tikz graphics can hang up when there are TeX
  errors in the tikz file; now we use \nonstopmode to avoid hiccup
  (#188)

  o multiple devices per chunk was buggy (#181)

  o S4 objects will be printed by show() instead of print(); this is a
  bug of the evaluate package, which has been fixed (please update it
  to be > 0.4.2)

MISC

  o it is recommended to use opts_chunk$set() to set global chunk
  options now instead of \SweaveOpts{}; all documentation has been
  updated (#216)

  o number of downloads (https://github.com/yihui/knitr/downloads) of
  knitr documentation before I removed and updated them on GitHub:
  c(main = ?, graphics = 275+)

			 CHANGES IN knitr VERSION 0.4

NEW FEATURES

  o Sweave concordance was finally implemented: when
  opts_knit$get('concordance') is TRUE, knitr will write a file named
  'input-concordance.tex' which contains the mapping between input Rnw
  and output tex line numbers; this feature is mainly for (but not
  limited to) RStudio to provide better error navigations: you can
  jump from the TeX error message to the Rnw source directly to know
  where the error comes from (the line number of the source of the
  error may not be accurate but should be in the ballpark) (#133)
  (thanks, JJ Allaire and Joe Cheng)

  o if output hooks have been set before calling knit(), they will be
  respected, i.e. knitr will no longer override them by default hooks;
  you need to make sure *all* output hooks are set appropriately,
  e.g. you can start by render_latex() and change some individual